--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo Cost Tracker</title>
+    <title>TodoCost - Online Cost To Do List</title>
+<meta name="description" content="Manage your tasks and costs easily with TodoCost, the online cost to do list app.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
